test/fails/bad_parsing/bad_name4.lgl
void main() {
    int vec2 = 5;
}
